[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-async-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
codex-async-mcp = "codex_async_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_async_mcp"]
