[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-async-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
agent-async-mcp = "agent_async_mcp.server:main"
agent-async = "agent_async_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_async_mcp"]
